--- a/index.html
+++ b/index.html
@@ -7,5 +7,33 @@
     <link rel="stylesheet" href="./pages/index.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="page">
+      <header class="header">
+        <img
+          class="header__logo"
+          src="./images/__logo.png"
+          alt="логотип карты России"
+        />
+        <div class="header__lang-link">
+          <a href="#" class="header__lang-link_item">Ru</a>
+          <a href="#" class="header__lang-link_item header__lang-link_active"
+            >En</a
+          >
+        </div>
+        <h1 class="header__title">Путешествия по России</h1>
+        <p class="header__subtitle">
+          Настоящая страна не в выпусках новостей, а здесь.
+        </p>
+        <div class="header__item">
+          <img
+            class="header__image"
+            src="./images/__image.jpg"
+            alt="Фото со спящей девушкой в поезде и картой поездки"
+          />
+          <p class="header__caption">ваша полка — верхняя</p>
+        </div>
+      </header>
+    </div>
+  </body>
 </html>
