--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="page">
-      <header class="header">
+      <header class="header header__size">
         <img
           class="header__logo"
           src="./images/__logo.png"
