--- a/index.html
+++ b/index.html
@@ -32,8 +32,118 @@
             alt="Фото со спящей девушкой в поезде и картой поездки"
           />
           <p class="header__caption">ваша полка — верхняя</p>
+          <div class="header-lead">
+            <h2 class="header-lead__title">Чего мы там&nbsp;не видели?</h2>
+            <p class="header-lead__text">
+              По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
+              но&nbsp;только&nbsp;36% планируют провести отпуск в&nbsp;родной
+              стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом
+              деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым
+              морем юга, густыми лесами Саян и&nbsp;суровыми льдами плато
+              Путорана. А&nbsp;ещё увидеть все эти красоты можно без миллионов
+              на&nbsp;счету, загранпаспорта и&nbsp;многочасовых перелетов. Как,
+              например, Вера Башмакова&nbsp;&mdash; смелая молодая мама, которая
+              взяла в&nbsp;охапку троих детей, усадила их&nbsp;в&nbsp;свою
+              &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч километров
+              по&nbsp;родной стране. Мы&nbsp;выбрали и&nbsp;описали некоторые
+              интересные места, достойные вашего отпуска.
+            </p>
+            <ul class="header-lead__list">
+              <li class="header-lead__item">
+                Часовых поясов<span class="header-lead__item_normal"> 11</span>
+              </li>
+              <li class="header-lead__item">
+                Объектов природного наследия ЮНЕСКО<span
+                  class="header-lead__item_normal"
+                >
+                  12</span
+                >
+              </li>
+              <li class="header-lead__item">
+                Объектов культурного наследия ЮНЕСКО<span
+                  class="header-lead__item_normal"
+                >
+                  16</span
+                >
+              </li>
+              <li class="header-lead__item">
+                Природных заповедников<span class="header-lead__item_normal">
+                  105</span
+                >
+              </li>
+              <li class="header-lead__item">
+                Аэропортов<span class="header-lead__item_normal"> 241</span>
+              </li>
+            </ul>
+          </div>
         </div>
       </header>
+      <main class="main">
+        <section class="header__size">
+          <div class="photo-grid">
+            <img
+              class="photo-grid__item"
+              src="./images/__item1.jpg"
+              alt="природа"
+            />
+            <img
+              class="photo-grid__item"
+              src="./images/__item2.jpg"
+              alt="природа"
+            />
+            <img
+              class="photo-grid__item"
+              src="./images/__item3.jpg"
+              alt="природа"
+            />
+            <img
+              class="photo-grid__item"
+              src="./images/__item4.jpg"
+              alt="природа"
+            />
+            <img
+              class="photo-grid__item"
+              src="./images/__item5.jpg"
+              alt="природа"
+            />
+            <img
+              class="photo-grid__item"
+              src="./images/__item6.jpg"
+              alt="природа"
+            />
+            <img
+              class="photo-grid__item"
+              src="./images/__item7.jpg"
+              alt="природа"
+            />
+            <img
+              class="photo-grid__item"
+              src="./images/__item8.jpg"
+              alt="природа"
+            />
+            <img
+              class="photo-grid__item"
+              src="./images/__item9.jpg"
+              alt="природа"
+            />
+            <img
+              class="photo-grid__item"
+              src="./images/__item10.jpg"
+              alt="природа"
+            />
+            <img
+              class="photo-grid__item"
+              src="./images/__item11.jpg"
+              alt="природа"
+            />
+            <img
+              class="photo-grid__item"
+              src="./images/__item12.jpg"
+              alt="природа"
+            />
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
