--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="page">
-      <header class="header header__size">
+      <header class="header size">
         <img
           class="header__logo"
           src="./images/__logo.png"
@@ -79,7 +79,7 @@
         </div>
       </header>
       <main class="main">
-        <section class="header__size">
+        <section class="size">
           <div class="photo-grid">
             <img
               class="photo-grid__item"
@@ -143,6 +143,165 @@
             />
           </div>
         </section>
+        <article class="size">
+          <div class="places">
+            <h3 class="places__title">Куршская коса</h3>
+            <div class="places__website">
+              <p class="places__url">URL</p>
+              <a href="http://park-kosa.ru" class="places__link"
+                >park-kosa.ru</a
+              >
+            </div>
+            <img
+              class="places__image"
+              src="./images/__image1.jpg"
+              alt="Куршская коса"
+            />
+            <div class="places__paragraph">
+              <p class="places__text">
+                Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете
+                увидеть два водных горизонта&nbsp;&mdash; спокойного Куршского
+                залива с&nbsp;одной стороны и подёрнутого рябью волн Балтийского
+                моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю
+                российского анклава.
+              </p>
+              <p class="places__text text__letter-spacing_type_plus">
+                На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для
+                путешественника и&nbsp;исследователя там&nbsp;же
+                по&nbsp;соседству&nbsp;&mdash; самая западная точка России,
+                Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи
+                небольших приморских городов. Атмосфера здешних мест исключает
+                суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального,
+                прохладного моря.
+              </p>
+            </div>
+          </div>
+          <div class="places places_type_thin">
+            <h3 class="places__title">Кольский</h3>
+            <div class="places__website">
+              <p class="places__url">URL</p>
+              <a
+                href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                class="places__link"
+                >National Geographic</a
+              >
+            </div>
+            <img
+              class="places__image"
+              src="./images/__image2.jpg"
+              alt="Кольский"
+            />
+            <div class="places__paragraph">
+              <p class="places__text">
+                Почти весь полуостров находится за&nbsp;Полярным кругом.
+                Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash; тайга,
+                а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан,
+                прикидывающийся Баренцевым морем.
+              </p>
+              <p class="places__text text__letter-spacing_type_minus">
+                Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали
+                историю арктического фестиваля в&nbsp;Териберке. Возможно, слово
+                &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных
+                воспоминаний об&nbsp;уроках географии. Возможно,
+                вы&nbsp;не&nbsp;интересовались пронизывающей земную кору
+                сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно
+                накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние
+                начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.
+              </p>
+            </div>
+          </div>
+          <div class="places places_type_thin">
+            <h3 class="places__title">Алтай</h3>
+            <div class="places__website">
+              <p class="places__url">URL</p>
+              <a
+                href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
+                class="places__link"
+                >YouTube
+              </a>
+            </div>
+            <img
+              class="places__image"
+              src="./images/__image3.jpg"
+              alt="Алтай"
+            />
+            <div class="places__paragraph">
+              <p class="places__text">
+                Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России.
+                В&nbsp;первую очередь из-за гор: если ехать вдоль хребта,
+                вы&nbsp;увидите склоны, усыпанные соснами, горные реки
+                и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле
+                окна, сможете познакомиться с&nbsp;невидимым чудом здешних
+                мест&nbsp;&mdash; горным воздухом.
+              </p>
+              <p class="places__text">
+                Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего
+                летом. Так вы&nbsp;увидите всё разнообразие местной флоры
+                и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси, над хребтами
+                летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули.
+                И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского
+                края.
+              </p>
+            </div>
+          </div>
+          <div class="places">
+            <h3 class="places__title">Зимний Байкал</h3>
+            <div class="places__website">
+              <p class="places__url">URL</p>
+              <a href="https://vk.com/baikalmile" class="places__link"
+                >https://vk.com/baikalmile</a
+              >
+            </div>
+            <img
+              class="places__image"
+              src="./images/__image4.jpg"
+              alt="Зимний Байкал"
+            />
+            <div class="places__paragraph">
+              <p class="places__text">
+                Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие
+                также знают, что это самый большой источник пресной воды
+                и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.
+              </p>
+              <p class="places__text text__letter-spacing_type_plus">
+                Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для
+                соревнований по&nbsp;скийорингу. Это такой вид спорта, когда
+                лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем
+                старается развить как можно б&oacute;льшую скорость
+                на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале
+                &laquo;Байкальская миля&raquo; был поставлен мировой
+                рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.
+              </p>
+            </div>
+          </div>
+          <div class="places places_type_thin">
+            <h3 class="places__title">Карелия</h3>
+            <div class="places__website">
+              <p class="places__url">URL</p>
+              <a href="http://vodlozero.ru/" class="places__link"
+                >http://vodlozero.ru/</a
+              >
+            </div>
+            <img
+              class="places__image"
+              src="./images/__image5.jpg"
+              alt="Карелия"
+            />
+            <div class="places__paragraph">
+              <p class="places__text">
+                Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+                сибирская лиственница не растёт западнее Водлозера. Зато здесь
+                она вымахивает на 30 метров — леса карельских национальных
+                парков из-за непроходимых болот никогда не знали топора.
+                Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к
+                живому существу, видевшему солнце раньше, чем увидал его Иван
+                Грозный. В девственном лесу на сотню километров не встретишь
+                тропы. А на редких тропинках деревья в паре метров от земли
+                помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
+              </p>
+            </div>
+          </div>
+        </article>
       </main>
     </div>
   </body>
