--- a/index.html
+++ b/index.html
@@ -302,7 +302,29 @@
             </div>
           </div>
         </article>
+        <section class="cover cover__overlay size">
+          <a
+            href="https://stampsy.com/na-elektrichkakh-do-baikala"
+            class="cover__link"
+            target="_blank"
+          >
+            <h2 class="cover__title cover__overlay">До Байкала «на собаках»</h2>
+            <p class="cover__subtitle cover__overlay">
+              По мотивам учебной темы о Транссибе — путешествие от столицы до
+              Байкала на электричках.
+            </p>
+          </a>
+        </section>
       </main>
+      <footer class="footer">
+        <nav>
+          <a href="" class="footer__link">Карты</a>
+          <a href="" class="footer__link">Погода</a>
+          <a href="" class="footer__link">Расписание</a>
+          <a href="" class="footer__link">Календарь</a>
+          <a href="" class="footer__link">Путешествия</a>
+        </nav>
+      </footer>
     </div>
   </body>
 </html>
