--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
   <body>
     <div class="page">
       <header class="header size">
-        <img
-          class="header__logo"
-          src="./images/__logo.png"
-          alt="логотип карты России"
-        />
-        <div class="header__lang-link">
-          <a href="#" class="header__lang-link_item">Ru</a>
-          <a href="#" class="header__lang-link_item header__lang-link_active"
-            >En</a
-          >
+        <div class="header__container size">
+          <img
+            class="header__logo"
+            src="./images/__logo.png"
+            alt="логотип карты России"
+          />
+          <div class="header__lang-link">
+            <a href="#" class="header__lang-link_item">Ru</a>
+            <a href="#" class="header__lang-link_item header__lang-link_active"
+              >En</a
+            >
+          </div>
         </div>
         <h1 class="header__title">Путешествия по России</h1>
         <p class="header__subtitle">
@@ -316,14 +318,15 @@
           </a>
         </section>
       </main>
-      <footer class="footer">
-        <nav>
+      <footer class="footer size">
+        <nav class="footer__links">
           <a href="" class="footer__link">Карты</a>
           <a href="" class="footer__link">Погода</a>
           <a href="" class="footer__link">Расписание</a>
           <a href="" class="footer__link">Календарь</a>
           <a href="" class="footer__link">Путешествия</a>
         </nav>
+        <p class="footer__copyright">&copy; 2023. Макс Логвинов</p>
       </footer>
     </div>
   </body>
