--- a/index.html
+++ b/index.html
@@ -86,62 +86,62 @@
             <img
               class="photo-grid__item"
               src="./images/__item1.jpg"
-              alt="природа"
+              alt="Вид из окна поезда"
             />
             <img
               class="photo-grid__item"
               src="./images/__item2.jpg"
-              alt="природа"
+              alt="Гора Тулси"
             />
             <img
               class="photo-grid__item"
               src="./images/__item3.jpg"
-              alt="природа"
+              alt="Туман"
             />
             <img
               class="photo-grid__item"
               src="./images/__item4.jpg"
-              alt="природа"
+              alt="Сочи"
             />
             <img
               class="photo-grid__item"
               src="./images/__item5.jpg"
-              alt="природа"
+              alt="Ариса"
             />
             <img
               class="photo-grid__item"
               src="./images/__item6.jpg"
-              alt="природа"
+              alt="Байкал"
             />
             <img
               class="photo-grid__item"
               src="./images/__item7.jpg"
-              alt="природа"
+              alt="Эльбрус"
             />
             <img
               class="photo-grid__item"
               src="./images/__item8.jpg"
-              alt="природа"
+              alt="Кондратьев"
             />
             <img
               class="photo-grid__item"
               src="./images/__item9.jpg"
-              alt="природа"
+              alt="Камчатка"
             />
             <img
               class="photo-grid__item"
               src="./images/__item10.jpg"
-              alt="природа"
+              alt="Другой взгляд на Камчатку"
             />
             <img
               class="photo-grid__item"
               src="./images/__item11.jpg"
-              alt="природа"
+              alt="Байкал с другой стороны"
             />
             <img
               class="photo-grid__item"
               src="./images/__item12.jpg"
-              alt="природа"
+              alt="Эргаки"
             />
           </div>
         </section>
