--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <title>Document</title>
+    <title>Путешествия по России</title>
   </head>
   <body>
     <div class="page">
@@ -17,8 +17,10 @@
             alt="логотип карты России"
           />
           <div class="header__lang-link">
-            <a href="#" class="header__lang-link_item">Ru</a>
-            <a href="#" class="header__lang-link_item header__lang-link_active"
+            <a href="#" class="header__lang-link_type_normal">Ru</a>
+            <a
+              href="#"
+              class="header__lang-link_type_normal header__lang-link_type_active"
               >En</a
             >
           </div>
@@ -52,29 +54,35 @@
             </p>
             <ul class="header-lead__list">
               <li class="header-lead__item">
-                Часовых поясов<span class="header-lead__item_normal"> 11</span>
+                Часовых поясов<span class="header-lead__item_type_normal">
+                  11</span
+                >
               </li>
               <li class="header-lead__item">
                 Объектов природного наследия ЮНЕСКО<span
-                  class="header-lead__item_normal"
+                  class="header-lead__item_type_normal"
                 >
                   12</span
                 >
               </li>
               <li class="header-lead__item">
                 Объектов культурного наследия ЮНЕСКО<span
-                  class="header-lead__item_normal"
+                  class="header-lead__item_type_normal"
                 >
                   16</span
                 >
               </li>
               <li class="header-lead__item">
-                Природных заповедников<span class="header-lead__item_normal">
+                Природных заповедников<span
+                  class="header-lead__item_type_normal"
+                >
                   105</span
                 >
               </li>
               <li class="header-lead__item">
-                Аэропортов<span class="header-lead__item_normal"> 241</span>
+                Аэропортов<span class="header-lead__item_type_normal">
+                  241</span
+                >
               </li>
             </ul>
           </div>
@@ -167,7 +175,7 @@
                 моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю
                 российского анклава.
               </p>
-              <p class="places__text text__letter-spacing_type_plus">
+              <p class="places__text places__letter-spacing_type_plus">
                 На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для
                 путешественника и&nbsp;исследователя там&nbsp;же
                 по&nbsp;соседству&nbsp;&mdash; самая западная точка России,
@@ -200,7 +208,7 @@
                 а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан,
                 прикидывающийся Баренцевым морем.
               </p>
-              <p class="places__text text__letter-spacing_type_minus">
+              <p class="places__text places__letter-spacing_type_minus">
                 Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали
                 историю арктического фестиваля в&nbsp;Териберке. Возможно, слово
                 &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных
@@ -265,7 +273,7 @@
                 также знают, что это самый большой источник пресной воды
                 и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.
               </p>
-              <p class="places__text text__letter-spacing_type_plus">
+              <p class="places__text places__letter-spacing_type_plus">
                 Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для
                 соревнований по&nbsp;скийорингу. Это такой вид спорта, когда
                 лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем
@@ -304,7 +312,7 @@
             </div>
           </div>
         </article>
-        <section class="cover cover__overlay size">
+        <section class="size cover cover__overlay">
           <a
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
             class="cover__link"
