--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             src="./images/__logo.png"
             alt="логотип карты России"
           />
-          <div class="header__lang-link">
-            <a href="#" class="header__lang-link_type_normal">Ru</a>
+          <div class="header__lang">
+            <a href="#" class="header__lang_type_normal">Ru</a>
             <a
               href="#"
-              class="header__lang-link_type_normal header__lang-link_type_active"
+              class="header__lang_type_normal header__lang_type_active"
               >En</a
             >
           </div>
@@ -54,35 +54,29 @@
             </p>
             <ul class="header-lead__list">
               <li class="header-lead__item">
-                Часовых поясов<span class="header-lead__item_type_normal">
-                  11</span
-                >
+                Часовых поясов<span class="header-lead__item-weight"> 11</span>
               </li>
               <li class="header-lead__item">
                 Объектов природного наследия ЮНЕСКО<span
-                  class="header-lead__item_type_normal"
+                  class="header-lead__item-weight"
                 >
                   12</span
                 >
               </li>
               <li class="header-lead__item">
                 Объектов культурного наследия ЮНЕСКО<span
-                  class="header-lead__item_type_normal"
+                  class="header-lead__item-weight"
                 >
                   16</span
                 >
               </li>
               <li class="header-lead__item">
-                Природных заповедников<span
-                  class="header-lead__item_type_normal"
-                >
+                Природных заповедников<span class="header-lead__item-weight">
                   105</span
                 >
               </li>
               <li class="header-lead__item">
-                Аэропортов<span class="header-lead__item_type_normal">
-                  241</span
-                >
+                Аэропортов<span class="header-lead__item-weight"> 241</span>
               </li>
             </ul>
           </div>
@@ -175,7 +169,7 @@
                 моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю
                 российского анклава.
               </p>
-              <p class="places__text places__letter-spacing_type_plus">
+              <p class="places__text letter-spacing__plus">
                 На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для
                 путешественника и&nbsp;исследователя там&nbsp;же
                 по&nbsp;соседству&nbsp;&mdash; самая западная точка России,
@@ -208,7 +202,7 @@
                 а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан,
                 прикидывающийся Баренцевым морем.
               </p>
-              <p class="places__text places__letter-spacing_type_minus">
+              <p class="places__text letter-spacing__minus">
                 Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали
                 историю арктического фестиваля в&nbsp;Териберке. Возможно, слово
                 &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных
@@ -273,7 +267,7 @@
                 также знают, что это самый большой источник пресной воды
                 и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.
               </p>
-              <p class="places__text places__letter-spacing_type_plus">
+              <p class="places__text letter-spacing__plus">
                 Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для
                 соревнований по&nbsp;скийорингу. Это такой вид спорта, когда
                 лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем
@@ -312,14 +306,14 @@
             </div>
           </div>
         </article>
-        <section class="size cover cover__overlay">
+        <section class="size cover">
           <a
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
             class="cover__link"
             target="_blank"
           >
-            <h2 class="cover__title cover__overlay">До Байкала «на собаках»</h2>
-            <p class="cover__subtitle cover__overlay">
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <p class="cover__subtitle">
               По мотивам учебной темы о Транссибе — путешествие от столицы до
               Байкала на электричках.
             </p>
