--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
           />
           <div class="header__lang">
             <a href="#" class="header__lang_type_normal">Ru</a>
-            <a
-              href="#"
-              class="header__lang_type_normal header__lang_type_active"
-              >En</a
-            >
+            <a href="#" class="header__lang_type_active">En</a>
           </div>
         </div>
         <h1 class="header__title">Путешествия по России</h1>
@@ -169,7 +165,7 @@
                 моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю
                 российского анклава.
               </p>
-              <p class="places__text letter-spacing__plus">
+              <p class="places__text">
                 На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для
                 путешественника и&nbsp;исследователя там&nbsp;же
                 по&nbsp;соседству&nbsp;&mdash; самая западная точка России,
@@ -202,7 +198,7 @@
                 а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан,
                 прикидывающийся Баренцевым морем.
               </p>
-              <p class="places__text letter-spacing__minus">
+              <p class="places__text">
                 Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали
                 историю арктического фестиваля в&nbsp;Териберке. Возможно, слово
                 &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных
@@ -267,7 +263,7 @@
                 также знают, что это самый большой источник пресной воды
                 и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.
               </p>
-              <p class="places__text letter-spacing__plus">
+              <p class="places__text">
                 Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для
                 соревнований по&nbsp;скийорингу. Это такой вид спорта, когда
                 лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем
