--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             alt="логотип карты России"
           />
           <div class="header__lang">
-            <a href="#" class="header__lang_type_normal">Ru</a>
-            <a href="#" class="header__lang_type_active">En</a>
+            <a href="#" class="header__lang-link">Ru</a>
+            <a href="#" class="header__lang-link">En</a>
           </div>
         </div>
         <h1 class="header__title">Путешествия по России</h1>
