--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#" class="header__lang-link header__lang-link_active">En</a>
       </div>
     </header>
-    <main class="main">
+    <main class="main page__size">
       <section class="lead page__size">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">
